--- a/config/robotis_op_position_controllers.yaml
+++ b/config/robotis_op_position_controllers.yaml
@@ -17,6 +17,11 @@
   j_shoulder_l_position_controller:
     type: position_controllers/JointPositionController
     joint: j_shoulder_l
+    has_position_limits: true # Continuous joint
+    min_position: -2.0
+    max_position: 2.0
+    has_velocity_limits: true
+    max_velocity: 1.0
 
   j_high_arm_l_position_controller:
     type: position_controllers/JointPositionController
