--- a/package.xml
+++ b/package.xml
@@ -53,7 +53,12 @@
   <build_depend>pluginlib</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>message_generation</build_depend>
+  <build_depend>forward_command_controller</build_depend> 
+  
+ 
 
+  <run_depend>message_runtime</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>actionlib</run_depend>
@@ -65,14 +70,10 @@
   <run_depend>pluginlib</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>tf</run_depend>
-
+  <run_depend>forward_command_controller</run_depend> 
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <!-- You can specify that this package is a metapackage here: -->
-    <!-- <metapackage/> -->
-
-    <!-- Other tools can request additional information be placed here -->
-    	<!-- <controller_interface plugin="${prefix}/thor_mang_controllers_plugins.xml"/>-->
+      <controller_interface plugin="${prefix}/plugins.xml"/>
   </export>
 </package>
