Small config changes and add boost libs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,13 +24,13 @@ find_package(catkin REQUIRED COMPONENTS
 )
 
 ## System dependencies are found with CMake's conventions
-# find_package(Boost REQUIRED COMPONENTS system)
+find_package(Boost COMPONENTS thread REQUIRED)
 
 # Darwin-OP interface library
 
 SET(DARWIN_LIB_PATH /robotis/)
 find_package(darwin_lib REQUIRED)
-#MESSAGE(STATUS "${darwin_lib_INCLUDE_DIR}")
+MESSAGE(STATUS "${darwin_lib_LIBRARY}")
 
 
 ## Uncomment this if the package has a setup.py. This macro ensures
@@ -119,17 +119,24 @@ include_directories(include ${darwin_lib_INCLUDE_DIR})
 add_library(robotis_op_controllers src/darwin_joint_controller.cpp src/goalie_jump_controller.cpp)
 target_link_libraries(robotis_op_controllers ${catkin_LIBRARIES} ${darwin_lib_LIBRARY})
 add_dependencies(robotis_op_controllers ${PROJECT_NAME}_msgs_generate_messages_cpp)
-
+add_dependencies(robotis_op_controllers ${${PROJECT_NAME}_EXPORTED_TARGETS})
 
 ## Declare a cpp executable
 add_executable(${PROJECT_NAME} src/robotis_op_ros_controller.cpp src/robotis_op_hardware_interface.cpp)
 add_dependencies(${PROJECT_NAME} ${PROJECT_NAME}_gencfg)
-add_dependencies(${PROJECT_NAME} ${PROJECT_NAME}_msgs_generate_messages_cpp)
 target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${darwin_lib_LIBRARY})
+add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS})
+
+
+add_executable(op_pilot src/op_pilot.cpp)
+#add_dependencies(op_pilot ${PROJECT_NAME}_msgs_generate_messages_cpp)
+target_link_libraries(op_pilot ${catkin_LIBRARIES} ${darwin_lib_LIBRARY} ${Boost_LIBRARIES})
+add_dependencies(op_pilot ${${PROJECT_NAME}_EXPORTED_TARGETS})
 
 add_executable(move tests/move.cpp)
 #add_dependencies(move ${PROJECT_NAME}_msgs_generate_messages_cpp)
 target_link_libraries(move ${catkin_LIBRARIES} ${darwin_lib_LIBRARY})
+add_dependencies(move ${${PROJECT_NAME}_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 
@@ -142,7 +149,7 @@ install(DIRECTORY include/${PROJECT_NAME}/
 install(DIRECTORY launch/
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch)
  
-install(TARGETS robotis_op_controllers ${PROJECT_NAME} move
+install(TARGETS robotis_op_controllers ${PROJECT_NAME} op_pilot move
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
