--- a/package.xml
+++ b/package.xml
@@ -1,32 +1,19 @@
 <?xml version="1.0"?>
 <package>
-  <name>robotis_op_ros_control</name>
+  <name>op2_control</name>
   <version>0.0.0</version>
-  <description>The robotis_op_ros_control package</description>
+  <description>The op2_control package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="inna@robotis.com">Inna Tlisov (ROBOTIS)</maintainer>
+  <maintainer email="mllofriu@mail.usf.edu">Inna Tlisov (ROBOTIS)</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
   <license>LGPLv3</license>
-
-
-  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
-  <!-- Optional attribute type can be: website, bugtracker, or repository -->
-  <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/robotis_op_ros_control</url> -->
-
-
-  <!-- Author tags are optional, mutiple are allowed, one per tag -->
-  <!-- Authors do not have to be maintianers, but could be -->
-  <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
-  <author email="kevin.daun@freenet.de">Kevin Daun</author>
 
 
   <!-- The *_depend tags are used to specify dependencies -->
