Reading 15 joints at 100hz with little errors and good control at vel 10

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ find_package(catkin REQUIRED COMPONENTS
   actionlib_msgs
   actionlib
   std_msgs
+  geometry_msgs
   hardware_interface
   controller_manager
   dynamic_reconfigure
