--- a/package.xml
+++ b/package.xml
@@ -44,6 +44,7 @@
   <build_depend>forward_command_controller</build_depend> 
   <build_depend>position_controllers</build_depend> 
   <build_depend>angles</build_depend> 
+  <build_depend>dynamixel_sdk</build_depend>
 
   <run_depend>message_runtime</run_depend>
   <run_depend>roscpp</run_depend>
@@ -60,6 +61,7 @@
   <run_depend>forward_command_controller</run_depend> 
   <run_depend>position_controllers</run_depend> 
   <run_depend>angles</run_depend> 
+  <run_depend>dynamixel_sdk</run_depend>
 
 <!-- The export tag contains other, unspecified, tags -->
   <export>
